--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -138,12 +138,12 @@
   width: 0;
   height: 2px;
   background-color: white;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 .nav .sections p:hover::after {
   width: 100%;
-  transition: 0.5s ease-out;
+  transition: 0.2s ease-out;
 }
 
 .nav .sections p::before {
@@ -155,12 +155,12 @@
   width: 0;
   height: 2px;
   background-color: white;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 .nav .sections p:hover::before {
   width: 100%;
-  transition: 0.5s ease-out;
+  transition: 0.2s ease-out;
 }
 
 /* .section-animation {
