--- a/src/components/StartAnimation.css
+++ b/src/components/StartAnimation.css
@@ -125,7 +125,7 @@
 }
 
 /* ---------------------------------------------------------- IPHONE RWD ---------------------------------------------------------- */
-@media screen and (max-width: 834px) {
+@media screen and (max-width: 768px) {
   .start-animation .title {
     font-size: 2.2rem;
     -webkit-text-stroke-width: 1px;
@@ -142,7 +142,7 @@
 }
 
 /* ----------------------------------------------------------- IPAD RWD ----------------------------------------------------------- */
-@media screen and (max-width: 1194px) and (min-width: 834px) {
+@media screen and (max-width: 1194px) and (min-width: 768px) {
   .start-animation .title {
     font-size: 5rem;
     -webkit-text-stroke-width: 1px;
