--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -16,4 +16,19 @@
 
 .page {
   margin-left: 150px;
+  overflow: hidden;
+}
+
+/* ---------------------------------------------------------- IPHONE RWD ---------------------------------------------------------- */
+@media screen and (max-width: 768px) {
+  .page {
+    margin-left: 0;
+  }
+}
+
+/* ----------------------------------------------------------- IPAD RWD ----------------------------------------------------------- */
+@media screen and (max-width: 1194px) and (min-width: 768px) {
+  .page {
+    margin-left: 80px;
+  }
 }
